tests/ui/derives/derives-span-Clone-struct.stderr
error[E0277]: the trait bound `Error: Clone` is not satisfied
  --> $DIR/derives-span-Clone-struct.rs:8:5
   |
LL |     x: Error
   |     ^ the trait `Clone` is not implemented for `Error`
   |
help: consider annotating `Error` with `#[derive(Clone)]`
   |
LL | #[derive(Clone)]
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
